kubernetes/deployments/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
spec:
  type: NodePort
  selector:
    app: nginx-demo
  ports:
  - port: 4000
    targetPort: 80
    nodePort: 30001
    protocol: TCP
